--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -34,20 +34,26 @@
     </header>
 
     <main>
-        <div class="row justify-content-center">
-            <div class="col align-self-center">
-                <div class="col-6 barra_busqueda">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-4 shadow" type="search" aria-label="Search">
+        <!-- Buscador y boton de agregar -->
+        <div class="container mt-4">
+            <!-- py-4 agrega un margin vertical entre el boton y el buscador -->
+            <div class="row align-items-center gy-4">
+                <div class="col-md-6 col-lg-6">
+                    <form class="d-flex" role="search" id="search_pedidos">
+                        <input class="form-control rounded-4 shadow bg-white" type="search" aria-label="Search"
+                            id="search" placeholder="Buscar...">
                     </form>
                 </div>
             </div>
         </div>
 
+        <!-- Empieza la programación de las tablas
+      Primero se define las columnas con "th", "td" es para definir el contenido de cada columna-->¬
         <div class="container p-4 mt-5">
             <table class="table">
                 <thead class="text-center">
                     <tr class="table">
+                        <!-- Las columnas habitualmente son estáticas, en este caso siempre serán estáticas -->
                         <th scope="col">Cliente</th>
                         <th scope="col">Fecha registro</th>
                         <th scope="col">Productos</th>
@@ -57,6 +63,7 @@
                 </thead>
                 <tbody class="text-center">
                     <tr>
+                        <!-- Esto si ya es contenido que cuando vaya conectado a db, será interactivo -->
                         <td>Julio López</td>
                         <td>2024-02-14</td>
                         <td>3</td>
@@ -64,6 +71,9 @@
                             <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#EstadoPedido"><img
                                     src="../../resources/img/png/eye.square.png"
                                     class="tamanio_edicion_botones"></button>
+                            <!-- Aqui va el botón para ver el estado pedido-->
+                            <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
+                    se pone arriba del </html pero fuera del body-->
                         </td>
                         <td>
                             <button type="button" class="btn btn-danger img-fluid"><img
@@ -72,6 +82,8 @@
                             <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
                                 data-bs-target="#InfoPedido"><img src="../../resources/img/png/editar_boton.png"
                                     class="tamanio_edicion_botones"></button>
+                            <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
+                    se pone arriba del </html pero fuera del body-->
                         </td>
                     </tr>
                     <tr>
@@ -82,6 +94,9 @@
                             <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#EstadoPedido"><img
                                     src="../../resources/img/png/eye.square.png"
                                     class="tamanio_edicion_botones"></button>
+                            <!-- Aqui va el botón para ver el estado pedido-->
+                            <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
+                    se pone arriba del </html pero fuera del body-->
                         </td>
                         <td>
                             <button type="button" class="btn btn-danger img-fluid"><img
@@ -90,6 +105,8 @@
                             <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
                                 data-bs-target="#InfoPedido"><img src="../../resources/img/png/editar_boton.png"
                                     class="tamanio_edicion_botones"></button>
+                            <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
+                                      se pone arriba del </html pero fuera del body-->
                         </td>
                     </tr>
                     <tr>
@@ -100,6 +117,9 @@
                             <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#EstadoPedido"><img
                                     src="../../resources/img/png/eye.square.png"
                                     class="tamanio_edicion_botones"></button>
+                            <!-- Aqui va el botón para ver el estado pedido-->
+                            <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
+                    se pone arriba del </html pero fuera del body-->
                         </td>
                         <td>
                             <button type="button" class="btn btn-danger img-fluid"><img
@@ -108,6 +128,8 @@
                             <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
                                 data-bs-target="#InfoPedido"><img src="../../resources/img/png/editar_boton.png"
                                     class="tamanio_edicion_botones"></button>
+                            <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
+                    se pone arriba del </html pero fuera del body-->
                         </td>
                     </tr>
                 </tbody>
@@ -124,31 +146,36 @@
 </body>
 
 
-<!--Modal para el boton de modificar el estado del pedido-->
+<!-- Modal para modificar el estado del pedido -->
 <div class="modal" id="EstadoPedido" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <form>
             <div class="modal-content">
+                <!-- Encabezado del modal -->
                 <div class="modal-header bg-orange-color">
                     <div class="container text-center">
                         <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Estado</h1>
                     </div>
+                    <!-- Botón de cerrar -->
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                         aria-label="Close"></button>
                 </div>
+                <!-- Cuerpo del modal -->
                 <div class="modal-body">
                     <div class="container text-center">
+                        <!-- Etiqueta para el estado actual del pedido -->
                         <label class="form-check-label custom-bold-label" for="flexSwitchCheckChecked">Estado actual del
                             pedido</label>
                         <br>
+                        <!-- Dropdown para seleccionar el estado -->
                         <div class="dropdown">
                             <br>
                             <button class="btn bg-gray-color dropdown-toggle" type="button" id="dropdownMenuButton"
                                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <!-- Agrega el texto del estado seleccionado -->
                                 <span id="estadoSeleccionado">Elige un estado</span>
                             </button>
 
+                            <!-- Opciones del dropdown -->
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#" id="completadooption"> Completado</a>
                                 <a class="dropdown-item" href="#" id="pendienteoption"> Pendiente</a>
@@ -158,7 +185,9 @@
                     </div>
                     <br>
                 </div>
+                <!-- Pie del modal -->
                 <div class="container text-center">
+                    <!-- Botón para guardar cambios -->
                     <button type="button" class="btn btn-orange-color text-white">Guardar</button>
                 </div>
                 <br>
@@ -170,30 +199,37 @@
 
 
 
-<!--Modal para el boton de información pedido-->
+<!-- Modal para mostrar información detallada del pedido -->
 <div class="modal" id="InfoPedido" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <form>
             <div class="modal-content">
+                <!-- Encabezado del modal -->
                 <div class="modal-header bg-orange-color">
+                    <!-- Título del modal -->
                     <div class="container text-center">
                         <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Información del pedido</h1>
                     </div>
+                    <!-- Botón para cerrar el modal -->
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                         aria-label="Close"></button>
                 </div>
+                <!-- Cuerpo del modal -->
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-sm-12">
                             <ol class="list-group">
+                                <!-- Elemento de la lista representando un producto -->
                                 <li
                                     class="list-group-item d-flex justify-content-between align-items-start shadow mb-4">
                                     <img src="../../resources/img/png/product1.png" alt="Imagen" height="90">
+                                    <!-- Información del producto -->
                                     <div class="ms-2 me-auto">
                                         <span class="badge badge-custom text-dark shadow mb-4">1</span>
                                         <div class="marca"> Pedigree</div>
                                         <div class="producto"> Bolsa 21 kilos, pedigree perro adulto </div>
                                     </div>
+                                    <!-- Opciones para el producto -->
                                     <div class="d-flex flex-column mb-3">
                                         <div class="p-2 text-end">
                                             <button type="button" class="btn-close btn-close-red"
@@ -244,13 +280,18 @@
                                 <br>
                             </ol>
                         </div>
+                        <!-- Información adicional del pedido -->
                         <div class="col-sm-12 col-md-6">
+                            <!-- Etiqueta para el nombre -->
                             <label class="form-check-label custom-bold-label"
                                 for="flexSwitchCheckChecked">Nombre</label>
                             <br>
+                            <!-- Nombre del cliente -->
                             <label class="form-check-label" for="flexSwitchCheckChecked">Daniel Carranza</label>
                         </div>
+                        <!-- Más información adicional -->
                         <br>
+                        <!-- Información de la dirección -->
                         <div class="col-sm-12 col-md-6">
                             <label class="form-check-label custom-bold-label"
                                 for="flexSwitchCheckChecked">Dirección</label>
@@ -258,30 +299,40 @@
                             <label class="form-check-label" for="flexSwitchCheckChecked">Calle las rosas, residencial 4,
                                 poligono 3A, casa #10</label>
                         </div>
+                        <!-- Más información de la dirección -->
                         <br>
+                        <!-- Fecha de pago -->
                         <div class="col-sm-12 col-md-6">
                             <label class="form-check-label custom-bold-label" for="flexSwitchCheckChecked">Fecha que se
                                 realizo el pago</label>
                             <br>
+                            <!-- Fecha de pago del pedido -->
                             <label class="form-check-label" for="flexSwitchCheckChecked">2024-03-10</label>
                         </div>
+                        <!-- Total a pagar -->
                         <br>
                         <div class="col-sm-12 col-md-6">
                             <label class="form-check-label custom-bold-label" for="flexSwitchCheckChecked">Total a
                                 pagar</label>
                             <br>
+                            <!-- Monto total a pagar por el pedido -->
                             <label class="form-check-label" for="flexSwitchCheckChecked">$29.40</label>
                         </div>
                     </div>
                     <br>
                 </div>
+                <!-- Pie del modal -->
                 <div class="container text-center">
+                    <!-- Botón para salir del modal -->
                     <button type="button" class="btn btn-orange-color text-white">Salir</button>
                 </div>
                 <br>
             </div>
         </form>
     </div>
+</div>
+</form>
+</div>
 </div>
 
 
